<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Paws Hub</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="txt_pets">Pets</string>
    <string name="txt_profile">Profile</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="personal_info_title">Personal Information</string>
    <string name="account_info_title">Account Information</string>
    <string name="username_hint">User Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="google_auth" translatable="false">Google</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share_profile">Share</string>
    <string name="error_msg_title">Error</string>
    <string name="error_fields_required">Please fill in all the text fields</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_wrong_password">Incorrect password.</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="username_helper_text">Username must not contain special characters or spaces, and must be unique.</string>
    <string name="profile_image_content_description">Profile picture</string>
    <string name="edit_profile_picture_content_description">Edit Profile Picture</string>
    <string name="txt_country">Country</string>
    <string name="txt_city">City</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_confirm">Confirm</string>
    <string name="profile_updated_success">Profile updated successfully!</string>
    <string name="profile_update_error">An error occurred while updating your profile. Please try again later.</string>
    <string name="username_taken_error">This username is already taken. Please choose a different one.</string>
    <string name="deceptive_title_lost_pets">Search</string>
    <string name="deceptive_title_support_fragment" translatable="false">Pet Finder</string>
    <string name="preferred_pet">Preferred Pet</string>
    <string name="post_page_title">Post</string>
    <string name="question_pet_name">What is your pet\'s name?</string>
    <string name="question_pet_age">How old is your pet?</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="post_body_hint">Write something here…</string>
    <string name="years_old">years old</string>
    <string name="publish">Publish</string>
    <string name="question_pet_weight">What is your pet\'s weight?</string>
    <string name="add_pet_button">Add Pet</string>
    <string name="question_pet_type">What type of pet do you have?</string>
    <string name="question_pet_breed">What breed is your pet?</string>
    <string name="add_notes_button">Add Notes</string>
    <string-array name="pets_types">
        <item>"Dog"</item>
        <item>"Cat"</item>
        <item>"Other (specify)"</item>
        <item>"Bunny"</item>
        <item>"Bird"</item>
    </string-array>
    <string name="pet_description_placeholder">How is your pet? (optional)</string>
    <string name="pet_description_help_text">Please provide a description of your pet, including physical and psychological traits. Let us know if your pet is friendly!</string>
    <string name="pet_upload_success_message">Pet uploaded successfully!</string>
    <string name="pet_upload_failure_message">Failed to upload pet. Please try again later.</string>
    <string name="select_your_pet">Select your pet</string>
    <string name="enter_pet_breed">Enter your pet\'s breed</string>
    <string name="pet_breed_helper_text">Please enter your pet\'s breed and type</string>
    <string name="select_pet_hint">Select your pet, If you don\'t have any pets, please add a new one in the profile section</string>
    <string name="view">View</string>
    <string name="like" translatable="false">Like</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log Out</string>
    <string name="information">Information</string>
    <string name="notes">Notes</string>
    <string name="apply_filter">Filters</string>
    <string name="filter_dialog_positive">Apply</string>
    <string name="filter_dialog_negative">Cancel</string>
</resources>