<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/discoverFragment">

    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.software3.paws_hub_android.view.main_activity.DiscoverFragment"
        android:label="@string/discover"
        tools:layout="@layout/fragment_discover" >
        <action
            android:id="@+id/action_discoverFragment_to_postingFragment"
            app:destination="@id/postingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.software3.paws_hub_android.view.main_activity.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_petPublishFragment"
            app:destination="@id/petPublishFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:launchSingleTop="false"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/petFinderFragment"
        android:name="com.software3.paws_hub_android.view.main_activity.PetFinderFragment"
        android:label="@string/deceptive_title_support_fragment"
        tools:layout="@layout/fragment_pet_finder" >
        <action
            android:id="@+id/action_petFinderFragment_to_postingFragment"
            app:destination="@id/postingFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.software3.paws_hub_android.view.main_activity.SearchFragment"
        android:label="@string/deceptive_title_lost_pets"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/postingFragment"
        android:name="com.software3.paws_hub_android.PostingFragment"
        android:label="@string/post_page_title"
        tools:layout="@layout/fragment_posting" />
    <fragment
        android:id="@+id/petPublishFragment"
        android:name="com.software3.paws_hub_android.view.main_activity.PetPublishFragment"
        android:label="@string/publish"
        tools:layout="@layout/fragment_pet_publish" />
</navigation>