<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_welcome__layout"
    tools:context=".view.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingVertical="24dp"
        android:orientation="vertical"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/material_on_surface_emphasis_high_type"
            android:textSize="34sp"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_activity_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:elevation="5dp"
            style="@style/Widget.Material3.Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_activity_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:elevation="5dp"
            style="@style/Widget.Material3.Button.TonalButton"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>